--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -2,14 +2,7 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "baseUrl": ".",
-        "paths": {
-            "c/leaflet": [
-                "../staticresources/leaflet/leaflet.js"
-            ],
-            "c/nouislider": [
-                "../staticresources/nouislider/nouislider.js"
-            ]
-        }
+        "paths": {}
     },
     "include": [
         "**/*",
